@@ -1,0 +1,5 @@
+<noinclude>{|</noinclude>
+|-
+|{{#if:{{{arg1|}}}|{{{arg1}}}|no arg1}}
+|{{#if:{{{arg2|}}}|{{{arg2}}}|no arg2}}
+<noinclude>|}</noinclude>
